--- a/_posts/2022-10-04-Rabin加密原理.md
+++ b/_posts/2022-10-04-Rabin加密原理.md
@@ -1,7 +1,7 @@
 ---
 title: "Rabin加密原理"
 date: 2022-10-04 18:00:00 +0800
-categories: Crypto
+categories: [Crypto]
 tags: [crypto, math, rsa]     # TAG names should always be lowercase
 math: true
 ---
