--- a/_posts/2024-09-04-傅里叶变换.md
+++ b/_posts/2024-09-04-傅里叶变换.md
@@ -1,7 +1,7 @@
 ---
 title: "傅里叶变换"
 date: 2024-09-04 10:00:00 +0800
-categories: Math
+categories: [Math]
 tags: [math]     # TAG names should always be lowercase
 math: true
 ---
