add description and changed fourier content

--- a/_posts/2022-10-04-Rabin加密原理.md
+++ b/_posts/2022-10-04-Rabin加密原理.md
@@ -1,5 +1,6 @@
 ---
 title: "Rabin加密原理"
+description: 本文介绍了 Rabin 加密算法的数学基础和解密过程，包括二次剩余的概念、欧拉准则和 Cipolla 算法的应用，以及如何使用这些工具来破解 Rabin 加密。
 date: 2022-10-04 18:00:00 +0800
 categories: [Crypto]
 tags: [crypto, math, rsa]     # TAG names should always be lowercase
