--- a/_posts/2024-09-04-傅里叶变换.md
+++ b/_posts/2024-09-04-傅里叶变换.md
@@ -1,5 +1,6 @@
 ---
 title: "傅里叶变换"
+description: 
 date: 2024-09-04 10:00:00 +0800
 categories: [Math]
 tags: [math]     # TAG names should always be lowercase
@@ -8,8 +9,7 @@ math: true
 
 ## **阅读指南**
 
-本文并不是一篇严谨的数学证明，而是从大家较为熟悉的线性代数角度，帮助读者更直观地理解傅里叶变换的核心思想。通过这样的视角，读者可以更容易地将傅里叶变换与向量空间中的基向量、内积等概念联系起来。文章的1-7章是主要内容，旨在逐步构建傅里叶变换的理解框架。如果读者能够读到这一部分，相信已经对傅里叶变换有了大致的理解。第八章则是对相关概念的补充内容，作为额外参考，帮助读者更深入地探讨傅里叶变换的某些拓展应用。
-
+本文并不是一篇严谨的数学证明，而是从大家较为熟悉的线性代数角度，帮助读者更直观地理解傅里叶变换的核心思想。通过这样的视角，读者可以更容易地将傅里叶变换与向量空间中的基向量、内积、正交分解等概念联系起来。文章的1-6章是主要内容，旨在逐步构建傅里叶变换的理解框架。如果读者能够读到这一部分，相信已经对傅里叶变换有了大致的理解。第八章则是对相关概念的补充内容，作为额外参考，帮助读者更深入地探讨傅里叶变换的性质。
 ## **1. 傅里叶变换的基本形式**
 
 傅里叶变换将一个函数 $f(t)$ 从时域表示转换为频域表示，通常表示为：
@@ -45,7 +45,7 @@ $$
 
 这表明，傅里叶变换实际上是 $f(t)$ 在复指数函数基底上的投影，也就是它们之间的内积。
 
-## **3. 傅里叶变换的内积解释的物理意义**
+### **2.2 内积的物理意义**
 
 傅里叶变换通过这种“内积”的形式，将一个函数分解到频率基底上，这意味着我们可以将信号看作是不同频率成分的线性组合。具体来说：
 
@@ -54,7 +54,13 @@ $$
 
 这与线性代数中将向量投影到正交基向量上的操作是类似的。傅里叶变换中的复指数函数 $e^{i\omega t}$ 充当了这种 **基向量** 的角色，而傅里叶系数 $F(\omega)$ 就是这种投影的结果。
 
-## **4. 离散傅里叶变换（DFT）中的内积**
+### **2.3 正交分解与幺正变换**
+
+事实上，傅里叶变换不仅是将信号分解到频率基底上的投影，还可以理解为一种**正交分解**，即信号被分解到一组相互正交的基函数上。正交变换是一种保持向量长度和内积不变的线性变换，通常在实数域中定义。在复数域中，正交变换的拓展形式就是**幺正变换**（unitary transformation）。
+
+傅里叶变换正是这样的一种幺正变换，在进行时域到频域的转换时，它保持了信号的能量和内积的一致性。由于傅里叶变换所在的复数域基函数（复指数函数）是相互正交的，它不仅保证了频率基函数的正交性，也确保了信号的完全重建。傅里叶变换作为幺正变换，其逆变换同样具备幺正性，能够将频域中的信号无损地还原到时域。后文中我们将具体证明这组基函数确实是正交基。
+
+## **3. 离散傅里叶变换（DFT）中的内积**
 
 在离散傅里叶变换（DFT）中，内积的概念更加直观，因为我们处理的是有限维向量。对于长度为 $N$ 的信号 $x[n]$，其 DFT 可以写成：
 
@@ -64,31 +70,37 @@ $$
 
 这可以看作是向量 $x[n]$ 与复指数基向量 $e^{-i 2\pi kn / N}$ 之间的内积。
 
-## **5. 为什么复指数函数可以看作正交基向量？**
+## **4. 为什么复指数函数可以看作正交基向量？**
 
 在傅里叶变换中，复指数函数 $e^{i\omega t}$ 被看作是一组 **基函数** 或 **基向量**，这是因为在傅里叶分析中，它们充当了信号分解中的基本成分。要理解这一点，我们需要从函数空间的角度来看。
 
-### **5.1 基向量的概念**
+### **4.1 基向量的概念**
 
 在线性代数中，**基向量** 是用来表示向量空间中的所有向量的一组线性独立的向量。例如，在二维空间中，$(1, 0)$ 和 $(0, 1)$ 是一组基向量，任何其他向量都可以通过它们的线性组合来表示。
 
 类似地，在函数空间中，**基函数** 是一组可以用来表示所有函数的函数。例如，在傅里叶变换中，复指数函数 $e^{i\omega t}$ 充当了基函数。**任意平方可积**的函数都可以通过这些复指数函数的线性组合来表示，这就像用线性代数中的基向量来表示任意向量一样。
 
-### **5.2 正交基的性质**
+### **4.2 正交基的性质**
 
-复指数函数 $e^{i\omega t}$ 具有**正交性**，即对于不同的频率 $\omega$，它们之间的内积为零：
+复指数函数 $e^{i\omega t}$ 具有**正交性**，即对于不同的频率 $\omega$ 和 $\omega'$，它们之间的内积为零：
 
 $$
-\int_{-\infty}^{\infty} e^{i\omega t} e^{-i\omega' t} \, dt = 0 \quad \text{(当 } \omega \neq \omega' \text{)}
+\int_{-\infty}^{\infty} e^{i\omega t} e^{-i\omega' t} \, dt = \int_{-\infty}^{\infty} e^{i(\omega-\omega') t} \, dt \quad \text{(当 } \omega \neq \omega' \text{)}
 $$
 
-正交性意味着不同频率的复指数函数是彼此独立的，类似于线性代数中正交基向量之间的关系。这就是为什么我们可以把这些函数看作是表示函数空间的基向量。
+通过欧拉公式，我们可以将复指数函数转换为其对应的余弦和正弦形式：
 
-### **5.3 傅里叶变换中的基向量完备性**
+$$
+\int_{-\infty}^{\infty} e^{i(\omega-\omega') t} \, dt = \int_{-\infty}^{\infty} \left( \cos((\omega - \omega') t) + i \sin((\omega - \omega') t) \right) \, dt = 0 \quad \text{(当 } \omega \neq \omega' \text{)}
+$$
+
+当 $\omega \neq \omega'$ 时，由于余弦和正弦函数都是周期函数，并且在实数轴上关于原点对称，因此它们的积分在整个实数域上的结果为零，这反映了不同频率的复指数函数之间的正交性。正交性意味着不同频率的复指数函数是彼此独立的，类似于线性代数中正交基向量之间的关系。这就是为什么我们可以把这些函数看作是表示函数空间的基向量。
+
+### **4.3 傅里叶变换中的基向量完备性**
 
 因为傅里叶变换中基函数的完备性较为复杂，因此我们在这里通过傅里叶级数中基函数的完备性进行简单说明。傅里叶级数的基本思想是，任意周期函数都可以通过复指数函数的线性组合来表示，而复指数函数的表达式是通过欧拉公式推导得出的。
 
-#### **5.3.1 欧拉公式**
+#### **4.3.1 欧拉公式**
 
 欧拉公式描述了复指数和三角函数之间的关系，它的形式是：
 
@@ -98,7 +110,7 @@ $$
 
 其中，$\theta$ 是一个实数，$i$ 是虚数单位。这一公式是傅里叶变换以及傅里叶级数的基础，因为它将复指数函数和正弦、余弦函数联系在一起。
 
-#### **5.3.2 用复指数表示正弦和余弦函数**
+#### **4.3.2 用复指数表示正弦和余弦函数**
 
 根据欧拉公式，正弦和余弦函数可以用复指数函数来表示：
 
@@ -106,7 +118,7 @@ $$
 \cos(\theta) = \frac{e^{i\theta} + e^{-i\theta}}{2}, \quad \sin(\theta) = \frac{e^{i\theta} - e^{-i\theta}}{2i}
 $$
 
-#### **5.3.3 傅里叶级数的思想**
+#### **4.3.3 傅里叶级数的思想**
 
 对于任何周期函数 $f(t)$（周期为 $T$），傅里叶级数表示它可以被表示为一系列正弦和余弦函数的线性组合：
 
@@ -116,7 +128,7 @@ $$
 
 这个公式告诉我们，任何周期函数都可以通过一系列不同频率的正弦和余弦函数叠加得到。
 
-#### **5.3.3 复指数形式的傅里叶级数**
+#### **4.3.4 复指数形式的傅里叶级数**
 
 将傅里叶级数中的正弦和余弦函数替换为复指数形式：
 
@@ -151,7 +163,7 @@ $$
 
 这个表达式说明任何周期函数都可以表示为复指数函数的线性组合。这与线性代数中，任何向量都可以通过一组基向量的线性组合来表示是相似的。
 
-#### **5.3.4 傅里叶变换中的基向量完备性**
+#### **4.3.5 傅里叶变换中的基向量完备性**
 
 傅里叶变换扩展了傅里叶级数的应用，适用于更广泛的非周期函数，特别是平方可积的函数空间，即 $L^2(\mathbb{R})$ 空间。对于 $L^2(\mathbb{R})$ 中的任意函数 $f(t)$，都可以通过傅里叶变换将其表示为复指数函数的线性组合：
 
@@ -161,19 +173,19 @@ $$
 
 这里，$F(\omega)$ 是通过傅里叶变换计算得到的频域表示。根据 **Plancherel 定理** 和 **Parseval 定理**，傅里叶变换不仅保持了时域与频域中函数的能量一致性，还确保了复指数函数在 $L^2(\mathbb{R})$ 空间中的完备性。也就是说，任意平方可积的函数都可以通过复指数函数的加权线性组合进行完整的表示。因此，傅里叶变换中的复指数基函数 $e^{i \omega t}$ 构成了 $L^2(\mathbb{R})$ 空间的完备基，保证了任意非周期函数的可重建性。
 
-## **6. 频域函数**
+## **5. 频域函数**
 
-傅里叶变换中，内积的结果是一个函数，而不是常数，这是因为傅里叶变换本质上是一种将**整个函数**从时域转化为频域的操作，而不是简单的两个数值之间的内积。
+需要注意的是，傅里叶变换不仅仅是两个数值之间的简单内积操作，它的结果是一个函数，而不是常数。这是因为傅里叶变换可以看做是一种**正交变换**（本质上是幺正变换），将整个函数从时域映射到频域。它通过将信号分解到一组频域的正交基函数上，得到对应的频率成分。
 
-### **6.1 为什么内积的结果是一个函数，而不是常数？**
+### **5.1 为什么内积的结果是一个函数，而不是常数？**
 
 在常规的向量内积中，比如 $\langle \mathbf{v}, \mathbf{w} \rangle$，我们得到的是一个标量，因为我们只是在对两个固定的向量进行比较。
 
-但是在傅里叶变换中，$e^{i\omega t}$ 是一个参数为 $\omega$ 的函数，它表示不同频率上的基函数。因此，傅里叶变换计算的是在**每个频率 $\omega$** 上，函数 $f(t)$ 与对应基函数 $e^{i\omega t}$ 的投影值。最终，傅里叶变换返回的是**所有频率的投影结果的集合**，即一个关于频率 $\omega$ 的函数 $F(\omega)$，它描述了在每个频率 $\omega$ 处信号的幅度和相位。
+但是在傅里叶变换中，$e^{i\omega t}$ 是一个参数为 $\omega$ 的函数，它表示不同频率上的正交基函数。因此，傅里叶变换不仅仅是在计算某个固定频率上的内积，而是对**所有频率**的基函数进行正交分解，求得每个频率下的投影值。傅里叶变换实际上就是一个正交变换，它返回的是**每个频率基上的投影值的集合**，即一个关于频率 $ \omega $ 的函数 $F(\omega)$，该函数描述了信号在每个频率 $\omega$ 处的幅度和相位。
 
-### **6.2 内积的函数形式**
+### **5.2 内积的函数形式**
 
-在傅里叶变换中，频域函数 $F(\omega)$ 是信号 $f(t)$ 在频率域中的表示。对于每个频率 $\omega$，$F(\omega)$ 是一个复数，它包含了信号在该频率下的两个重要信息：**幅度**和**相位**。具体来说，傅里叶变换后的 $F(\omega)$ 可以表示为一个复数函数：
+在傅里叶变换中，频域函数 $F(\omega)$ 是信号 $f(t)$ 在频率域中的表示。每个频率 $\omega$ 处的傅里叶系数 $F(\omega)$ 是信号在对应频率上的正交投影值。对于每个频率 $\omega$，$F(\omega)$ 是一个复数，它包含了信号在该频率下的两个重要信息：**幅度**和**相位**。具体来说，傅里叶变换后的 $F(\omega)$ 可以表示为一个复数函数：
 
 $$
 F(\omega) = |F(\omega)| e^{i \arg(F(\omega))}
@@ -184,21 +196,19 @@ $$
 - $ \|F(\omega)\| $  是  $F(\omega)$  的模，表示信号在频率  $\omega$  处的**幅度**，也就是该频率成分的强度。它反映了信号在这个频率下的“含量”。
 - $\arg(F(\omega))$ 是 $F(\omega)$ 的辐角（相位角），表示信号在频率 $\omega$ 处的**相位**，即信号的相位偏移或时间偏移。
 
-因此，$F(\omega)$ 是一个复值函数，它同时包含了信号在不同频率下的强度（通过幅度 $\|F(\omega)\|$ 表示）和相对时间信息（通过相位 $\arg(F(\omega))$ 表示）。通过频域中的这些信息，我们可以全面地了解信号的频率组成和相位特性，从而为信号的分析和处理提供了完整的描述。
+因此，$F(\omega)$ 是一个复数，它同时包含了信号在不同频率下的强度（通过幅度 $\|F(\omega)\|$ 表示）和相对时间信息（通过相位 $\arg(F(\omega))$ 表示）。通过频域中的这些信息，我们可以全面地了解信号的频率组成和相位特性，从而为信号的分析和处理提供了完整的描述。
 
-## **7. 小结**
+## **6. 小结**
 
-傅里叶变换通过将时域中的信号 $f(t)$ 转换为频域表示 $F(\omega)$，使得我们能够分析信号的频率成分。复指数函数 $e^{i\omega t}$ 作为基函数，能够表示任意平方可积的函数，这类似于线性代数中的基向量表示。在傅里叶变换中，信号的频率信息通过幅度 $\|F(\omega)\|$ 和相位 $\arg(F(\omega))$ 来描述，分别表示信号在各个频率下的强度和相位偏移。
+本文从线性代数的角度分析了傅里叶变换的核心思想，探讨了其作为正交变换（幺正变换）的本质。傅里叶变换通过将信号从时域转换到频域，利用复指数函数作为正交基函数，将信号分解为不同频率的线性组合。这种正交分解本质上是函数空间中的内积操作，与向量空间中的正交基投影类似。
 
-傅里叶变换不仅在几何上可以通过内积的方式解释为信号在基函数上的投影，还能保证信号的能量在时域与频域之间保持一致。傅里叶级数作为傅里叶变换的一个特例，展示了如何通过正弦和余弦函数表示周期信号，而傅里叶变换则扩展到更大的函数空间 $L^2(\mathbb{R})$，能够处理非周期函数。
+在接下来的内容中，我们将进一步探讨傅里叶变换的幺正性质，并讨论幺正性在傅里叶变换中的重要作用。
 
-总之，傅里叶变换为我们提供了强有力的工具，通过频域分析来理解信号的频率结构，并在更广泛的函数空间中实现了基函数的完备性。
+## **7. 傅里叶变换是幺正变换**
 
-## **8. 傅里叶变换是幺正变换**
+前文我们提到了傅里叶变换本质上是一个**幺正变换（unitary transformation）**。接下来，我们将进一步探讨幺正变换的性质，具体说明傅里叶变换为何满足这些性质，以及幺正性在傅里叶变换中的重要作用。
 
-傅里叶变换虽然形式上是一个**内积**，但它本质上是一个**幺正变换（unitary transformation）**。为了理解这个问题，我们需要从两个方面来理解：一是傅里叶变换与内积的关系，二是为什么傅里叶变换具有幺正性。
-
-### **8.1 什么是幺正变换？**
+### **7.1 什么是幺正变换？**
 
 在数学上，**幺正变换** 是指一个线性变换，它保持向量空间中内积的长度不变。具体来说，一个变换 $U$ 是幺正的，当它满足以下条件：
 
@@ -206,9 +216,11 @@ $$
 U^\dagger U = U U^\dagger = I
 $$
 
-这里 $U^\dagger$ 是 $U$ 的共轭转置，$I$ 是单位矩阵。幺正变换的主要性质是，它保持向量的长度（即内积）不变，因此是一种“距离保持变换”。在物理学中，幺正变换保持系统的总能量或概率不变。
+这里 $U^\dagger$ 是 $U$ 的共轭转置，$I$ 是单位矩阵。幺正变换的主要性质是，它保持向量的长度（即内积）不变。此外，幺正变换还可以看作是**两组正交基之间的变换**，从一组正交基变换到另一组正交基。
 
-### **8.2 为什么傅里叶变换是幺正变换？**
+在物理学中，**幺正变换**不仅保持系统的总能量或总概率不变，而且由于它是可逆的，这意味着系统可以在幺正变换后反方向演化。这确保了系统在变换后可以无损地恢复原状，不仅保证了能量守恒，还确保了信息的完整性。
+
+### **7.2 为什么傅里叶变换是幺正变换？**
 
 傅里叶变换是一个从时域到频域的变换，保持了函数的能量或信号强度不变。这种能量守恒的特性使得傅里叶变换是一种**幺正变换**。从数学上看，傅里叶变换 $\mathcal{F}$ 满足以下条件：
 
@@ -242,15 +254,6 @@ $$
 
   这一点符合幺正变换的定义，因为幺正变换的逆变换也是幺正的。
 
-### **8.3 为什么傅里叶变换既是内积，又是幺正变换？**
+## **8. 总结**
 
-傅里叶变换虽然形式上是一个内积运算，但它也具备幺正变换的性质。原因在于：
-
-- **内积表示投影**：傅里叶变换通过内积将时域信号投影到复指数函数基底上。这个投影过程保留了信号的能量，因此傅里叶变换保持信号的“长度”不变。
-- **幺正变换保持能量不变**：傅里叶变换是一个从时域到频域的映射，它保持信号的能量不变，满足幺正变换的条件。
-
-因此，傅里叶变换既可以看作是**内积**，即信号在复指数基函数上的投影操作；同时它也是一个**幺正变换**，因为它保持了内积（信号的能量）不变，并且具有逆变换。
-
-## **9. 总结**
-
-傅里叶变换虽然表现为内积的形式，但本质上是一个幺正变换。它通过在复指数基函数上的投影来完成信号从时域到频域的转换，并保持了信号的能量或长度不变。因此，傅里叶变换既是一种投影（内积）运算，同时也是一种幺正变换。
+本文探讨了傅里叶变换作为一种幺正变换的性质。傅里叶变换不仅通过内积的形式将信号从时域转换到频域，还确保了信号的能量和信息的完整性。作为一种线性变换，它将信号分解到复指数函数构成的正交基上，保持了内积不变，并且具有明确的逆变换。因此，傅里叶变换是时频分析的强大工具。
