add description to fourier

--- a/_posts/2024-09-04-傅里叶变换.md
+++ b/_posts/2024-09-04-傅里叶变换.md
@@ -1,6 +1,6 @@
 ---
 title: "傅里叶变换"
-description: 
+description: 本文从线性代数角度分析傅里叶变换的核心思想，着重通过正交分解与幺正变换的视角，帮助读者更好地理解傅里叶变换的本质。
 date: 2024-09-04 10:00:00 +0800
 categories: [Math]
 tags: [math]     # TAG names should always be lowercase
