add description to fourier

--- a/_posts/2024-09-04-傅里叶变换.md
+++ b/_posts/2024-09-04-傅里叶变换.md
@@ -1,6 +1,6 @@
 ---
 title: "傅里叶变换"
-description: 本文从线性代数角度分析傅里叶变换的核心思想，着重通过正交分解与幺正变换的视角，帮助读者更好地理解傅里叶变换的本质。
+description: 本文从线性代数角度分析傅里叶变换的核心思想，着重通过正交分解与幺正变换的视角，帮助读者更好地理解傅里叶变换。注意，本文并不是一篇严谨的数学证明。
 date: 2024-09-04 10:00:00 +0800
 categories: [Math]
 tags: [math]     # TAG names should always be lowercase
@@ -10,6 +10,7 @@ math: true
 ## **阅读指南**
 
 本文并不是一篇严谨的数学证明，而是从大家较为熟悉的线性代数角度，帮助读者更直观地理解傅里叶变换的核心思想。通过这样的视角，读者可以更容易地将傅里叶变换与向量空间中的基向量、内积、正交分解等概念联系起来。文章的1-6章是主要内容，旨在逐步构建傅里叶变换的理解框架。如果读者能够读到这一部分，相信已经对傅里叶变换有了大致的理解。第八章则是对相关概念的补充内容，作为额外参考，帮助读者更深入地探讨傅里叶变换的性质。
+
 ## **1. 傅里叶变换的基本形式**
 
 傅里叶变换将一个函数 $f(t)$ 从时域表示转换为频域表示，通常表示为：
