--- a/_posts/2025-06-23-PhD申请纪实.md
+++ b/_posts/2025-06-23-PhD申请纪实.md
@@ -14,21 +14,21 @@ tags: [杂记, 申博]     # TAG names should always be lowercase
 
 以下是我列出的一些申请节点，标记 ✔ 的是收到（最终或稳定口头） offer 的学校，未标记的则最终没有通过面试。至于本校，我导师倒是想留我，奈何他没钱，只能申请校奖听天由命（英国校奖懂的都懂）。
 
-| 学校                              | 时间               |
-| --------------------------------- | ------------------ |
-| University of Klagenfurt ✔        | 2024-11-15         |
-| Edinburgh（本校）                 | 2024-11-25         |
-| UNSW ✔                            | 2024-12-02         |
-| Wollongong ✔                      | 2024-12-03         |
-| KCL                               | 2024-12-18（一面） |
-| NUS                               | 2024-12-19         |
-| Wollongong（另一个组）            | 2025-01-07         |
-| KCL（二面）                       | 2025-02-04         |
-| Wollongong（第三个组）            | 2025-02-19         |
-| ETH                               | 2025-02-28         |
-| IBM Research Zurich               | 2025-03-25         |
-| University of Amsterdam（一面）   | 2025-05-02         |
-| University of Amsterdam ✔（二面） | 2025-06-06         |
+| 学校                             | 时间       |
+| -------------------------------- | ---------- |
+| University of Klagenfurt ✔       | 2024-11-15 |
+| Edinburgh（本校）                | 2024-11-25 |
+| UNSW ✔                           | 2024-12-02 |
+| Wollongong ✔                     | 2024-12-03 |
+| KCL（一面）                      | 2024-12-18 |
+| NUS                              | 2024-12-19 |
+| Wollongong（另一个组）           | 2025-01-07 |
+| KCL（二面）                      | 2025-02-04 |
+| Wollongong（第三个组）           | 2025-02-19 |
+| ETH                              | 2025-02-28 |
+| IBM Research Zurich              | 2025-03-25 |
+| University of Amsterdam（一面）  | 2025-05-02 |
+| University of Amsterdam（二面）✔ | 2025-06-06 |
 
 实话实说，这里面我最中意的几个是 KCL（强组）、ETH（无需多言）、IBM Research（有 ETH 的博士学位），然而很可惜，这些最后都挂了。很感谢这一路上给我面试机会的学校，在这个过程中~~逼迫我~~让我学习了很多。有些导师的问题一针见血，面试完还得回去复盘好几轮，也有些关于人生选择的提问，促使我重新审视自己，这些都让我受益良多。无论如何，这是一个必须要经历的过程。人生不该是一帆风顺的，跌跌撞撞才就是成长的应有之义。
 
