--- a/_posts/2025-06-23-PhD申请纪实.md
+++ b/_posts/2025-06-23-PhD申请纪实.md
@@ -10,7 +10,7 @@ tags: [杂记, 申博]     # TAG names should always be lowercase
 
 先介绍一下个人情况吧，我是爱丁堡的本硕，学的是计算机，申请的是 2025 年入学的密码学 PhD。笔者并不是什么高手，也非坚毅努力之人，大学四年浑浑噩噩，如今半推半就走到此处，也不敢奢求太多。正如《万国志》里很喜欢的一句话：“岂能尽如人意，但求无愧我心。”既然该尝试的都尝试了，那便接受失败，接受自己，打好手里的牌，方为正解。
 
-我开始准备申请的时间其实已经很晚了，9 月份毕业才开始动手。最初连方向都不太确定，也是在导师的鼓励下才决定继续做这个专业。我的策略也很简单，美国完全不考虑（川宝活太密），先套磁一下澳洲练练手，找一下自己的位置，然后英国香港，最后欧洲。
+我开始准备申请的时间其实已经很晚了，9 月份毕业才开始动手。最初连方向都不太确定，也是在导师的鼓励下才决定继续做这个专业。我的策略也很简单，美国完全不考虑（川宝活太密），先套磁一下澳洲练练手，找一下自己的位置，然后英国香港新加坡，最后欧洲。
 
 以下是我列出的一些申请节点，标记 ✔ 的是收到（最终或稳定口头） offer 的学校，未标记的则最终没有通过面试。至于本校，我导师倒是想留我，奈何他没钱，只能申请校奖听天由命（英国校奖懂的都懂）。
 
