--- a/_posts/2025-06-23-PhD申请纪实.md
+++ b/_posts/2025-06-23-PhD申请纪实.md
@@ -36,7 +36,7 @@ tags: [杂记, 申博]     # TAG names should always be lowercase
 
 ---
 
-补充一个新的 ✔，也就是最后的 UvA（University of Amsterdam）。心灰意冷之际居然又收到一场面试，当时我其实已经准备接受 UNSW 的 offer 了，不过因为对方和我导师有合作关系（~~为了不给导师丢脸~~），我还是认真准备了，熬夜做出了 ppt，居然清晰又简洁地介绍了我硕士论文的细节，连自己都惊了。面试也非常愉快，一周后就收到了 offer。
+补充一个新的 ✔，也就是最后的 UvA（University of Amsterdam）。本已打算随波逐流听天由命之际居然又收到一场面试，其实当时我已经准备接受 UNSW 的 offer 了，不过因为对方和我导师有合作关系（~~为了不给导师丢脸~~），我还是认真准备了，熬夜做出了 ppt，居然清晰又简洁地介绍了我硕士论文的细节，连自己都惊了。面试也非常愉快，一周后就收到了 offer。
 
 选择总是困难的。选择了其一，就意味着放弃了另一种可能。失去在现在，收获却在迷雾般的未来，没有人能保证自己的决定一定是对的。可能 UvA 并不是我整个申请历程中最心仪的那一批，但人生如棋，落子无悔。
 
