--- a/_posts/2025-06-23-PhD申请纪实.md
+++ b/_posts/2025-06-23-PhD申请纪实.md
@@ -8,7 +8,7 @@ tags: [杂记, 申博]     # TAG names should always be lowercase
 
 一转眼到了四月，自从我 9 月份毕业回国已有大半年，博士申请也已经走到了最后一步。不禁唏嘘感叹，在此处记录一下申博的历程，或许以后会回看，若能帮到一些想要读博的朋友，那更是不胜欢喜。
 
-先介绍一下个人情况吧，我是爱丁堡的本硕，学的是计算机，申请的是 2025 年入学的密码学 PhD。笔者并不是什么高手，也非坚毅努力之人，大学四年浑浑噩噩，如今半推半就走到此处，也不敢奢求太多。正如《万国志》里很喜欢的一句话：“岂能尽如人意，但求无愧我心。”既然该尝试的都尝试了，那便接受失败，接受自己，打好手里的牌，方为正解。
+先介绍一下个人情况吧，我是爱丁堡的本硕，学的是计算机，申请的是 2025 年入学的密码学 PhD。笔者并不是什么高手，也非坚毅努力之人，大学四年浑浑噩噩，如今半推半就走到此处，也不敢奢求太多。正如《万国志》里很喜欢的一句话：“岂能尽如人意，但求无愧我心。”既然该尝试的都尝试了，那便接受自己，打好手里的牌，方为正解。
 
 我开始准备申请的时间其实已经很晚了，9 月份毕业才开始动手。最初连方向都不太确定，也是在导师的鼓励下才决定继续做这个专业。我的策略也很简单，美国完全不考虑（川宝活太密），先套磁一下澳洲练练手，找一下自己的位置，然后英国香港新加坡，最后欧洲。
 
@@ -38,6 +38,6 @@ tags: [杂记, 申博]     # TAG names should always be lowercase
 
 补充一个新的 ✔，也就是最后的 UvA（University of Amsterdam）。本已打算随波逐流听天由命之际居然又收到一场面试，其实当时我已经准备接受 UNSW 的 offer 了，不过因为对方和我导师有合作关系（~~为了不给导师丢脸~~），我还是认真准备了，熬夜做出了 ppt，居然清晰又简洁地介绍了我硕士论文的细节，连自己都惊了。面试也非常愉快，一周后就收到了 offer。
 
-选择总是困难的。选择了其一，就意味着放弃了另一种可能。失去在现在，收获却在迷雾般的未来，没有人能保证自己的决定一定是对的。可能 UvA 并不是我整个申请历程中最心仪的那一批，但人生如棋，落子无悔。
+选择总是困难的。选择了其一，就意味着放弃了另一种可能。失去在现在，收获却在迷雾般的未来，没有人能保证自己的决定一定是对的。So what? 人生如棋，落子无悔。
 
 **欧洲，我回来了。**
